--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -7,6 +7,11 @@ on:
     - cron: "30 15 * * *" # 9 PM SLT (3:30 PM UTC)
 
   workflow_dispatch: # Allow manual triggering
+  
+  push: # Trigger on push to master to register the workflow
+    branches:
+      - master
+      - main
 
 permissions:
   contents: write  # Allow the workflow to push commits
